--- a/binghamton/math-330/hw/hw13.md
+++ b/binghamton/math-330/hw/hw13.md
@@ -65,20 +65,56 @@ Since $g_1 \text{ and } g_2$ map to the same element $a\in A$ given the same inp
 
 ## Proposition 9.14
 
-We want to embed $Z$ into $R$. To do this, we define an injective function $e : Z \to R$ as follows:  
+We want to embed $\mathbb{Z}$ into $\mathbb{R}$. To do this, we define an injective function $e : \mathbb{Z} \to \mathbb{R}$ as follows:  
 
-(i) Define $e$ on $Z_{\geq 0}$ recursively: $e(0_Z) := 0_R$ and, assuming $e(n)$ defined for a fixed $n \in Z_{\geq 0}$, define  
+(i) Define $e$ on $\mathbb{Z}_{\geq 0}$ recursively: $e(0_Z) := 0_R$ and, assuming $e(n)$ defined for a fixed $n \in \mathbb{Z}_{\geq 0}$, define  
 $e(n + 1_Z) := e(n) + 1_R$.  
 
-(ii) If $k \in Z$ and $k < 0$, define $e(k) := -e(-k)$.  
+(ii) If $k \in \mathbb{Z}$ and $k < 0$, define $e(k) := -e (-k)$.  
 
 **Prove:**  
 (i) $e(1_Z) = 1_R$  
+
+**Proof.**  
+
+$e(1_\mathbb{Z})=e(0_\mathbb{Z}) + 1_\mathbb{R}$, by definition.  
+$e(0_\mathbb{Z})=0_\mathbb{R}$ by definition, so $e(0_\mathbb{Z}) + 1_\mathbb{R}=0_\mathbb{R}+1_\mathbb{R}=1_\mathbb{R}$.  
+
+**QED.**  
+
 (ii) $e(-1_Z) = -1_R$  
+
+**Proof.**  
+
+By definition, $e(-1_\mathbb{Z})=-e(1_\mathbb{Z})$. By part (i), $e(1_\mathbb{Z})=1_\mathbb{R}$, so $-e(1_\mathbb{Z})=-(1_\mathbb{R})=-1_\mathbb{R}$.  
+
+**QED.**  
 
 ## Proposition 9.15
 
 If $k \in \mathbb{N}$ then $e(k) \in \mathbb{R}_{>0}$  
+
+**Proof.**  
+
+We prove this with induction on $k\in \mathbb{N}$.  
+
+Let $P(k)$ be the statement $e(k)\in \mathbb{R}_{>0}$.  
+
+**Base case: Prove $P(1)$.**  
+
+$P(1)$ is the statement $e(1)\in \mathbb{R}_{>0}$.  
+By proposition 9.14(ii), $e(1)=1$.  
+By Proposition 8.28, $1\in \mathbb{R}_{>0}$.   
+
+**Inductive step: Prove $P(k)\implies P(k+1)$.**  
+
+$P(k+1)$ is the statement $e(k+1)\in\mathbb{R}_{>0}$.  
+By definition, $e(k+1)=e(k)+1$, and by the inductive hypothesis, $e(k)\in\mathbb{R}_{>0}$. By Proposition 8.28, $1\in \mathbb{R}_{>0}$.  
+Since $e(k), 1\in \mathbb{R}_{>0}$, by Axiom 8.26(i), the sum $(e(k)+1)\in\mathbb{R}_{>0}$.  
+
+Proved by induction.  
+
+**QED.**  
 
 ## Project 9.13
 
