--- a/binghamton/math-330/hw/hw14.md
+++ b/binghamton/math-330/hw/hw14.md
@@ -58,12 +58,38 @@ We define $f$ as follows:
 Or more formally:  
 $$f(x) := 
 \begin{cases}
-\frac{x-1}{2} & \text{if } x \text{ is even}, \\
-\frac{x}{2} & \text{if } x \text{ is odd}
+\frac{x-1}{2} & \text{if } x \text{ is odd}, \\
+-\frac{x}{2} & \text{if } x \text{ is even}
 \end{cases}$$  
 
 **Prove: $f$ is injective.**  
+
+We need to prove that for any $n_1, n_2\in \mathbb{N}, f(n_1)=f(n_2)\implies n_1=n_2$.  
+
+Let $f(n_1)=f(n_2)$.  
+
+Case 1: $n_1, n_2$ are even.  
+
+Then $-\frac{n_1}{2}=-\frac{n_2}{2}$.  
+Multiplying both sides by $2$: $-n_1=-n_2$  
+Multiplying both sides by $-1$: $n_1=n_2$  
+
+Case 2: $n_1, n_2$ are odd.  
+
+Then $\frac{n_1-1}{2}=\frac{n_2-1}{2}$.  
+Multiplying both sides by $2$: $n_1-1=n_2-1$  
+Add $1$ to both sides: $n_1=n_2-1$  
+
+Case 3: $n_1$ is even and $n_2$ is odd.  
+`CANNOT HAPPEN. CONTRADICTION. prove this`  
+
+Case 4: $n_1$ is odd and $n_2$ is even.  
+`CANNOT HAPPEN. CONTRADICTION. prove this`  
+
+
 **Prove: $f$ is surjective.**  
+
+We need to prove that for all $z\in\mathbb{Z}$, there exists a $n\in\mathbb{N}$ where $z=f(n)$.  
 
 Since $f$ is injective and surjective, by definition, it is bijective.  
 
