--- a/binghamton/math-330/hw/hw14.md
+++ b/binghamton/math-330/hw/hw14.md
@@ -1,4 +1,4 @@
-# Homework 14
+-# Homework 14
 Do Project 11.11. Prove Props. 13.1, 13.3, 13.6, 13.13. (F 5/2)  
 Study Thm. 10.1, §10.2 def. of |x|, §10.3 distance from x to y.  
 §11.1: Know def. of rational numbers.  
@@ -16,7 +16,10 @@ Let $f : [1]\to [n]$.  $[1]$ is defined as $\{1\}$, so $f : \{1\}\to [n]$.
 This function $f$ can be rewritten as the set $\Gamma_f\subset (\{1\}\times [n])$, where there must exist one and only one entry with $1$ as the first element.  
 Therefore, the only valid sets for $\Gamma_f$ are $\{(1, b)\}$, for some arbitrary $b\in [n]$.  
 By definition of $[n]$, when $n>1$, $\{1, 2\}\subseteq [n]$.  
-When $$  
+Since $b$ is a single element, without loss of generality, there will be at least one unused element of $[n]$. Let an unused element $c\in[n]$.  
+
+$f$ is a surjection if for every $n\in[n]$, there exists a $a\in \{1\}$ such that $f(a)=n$.  
+
 `UNFINSIHED`  
 
 ## Proposition 13.3
@@ -70,27 +73,34 @@ Let $f(n_1)=f(n_2)$.
 
 Case 1: $n_1, n_2$ are even.  
 
-Then $-\frac{n_1}{2}=-\frac{n_2}{2}$.  
+Then we have $f(n_1)=f(n_2)\iff -\frac{n_1}{2}=-\frac{n_2}{2}$.  
 Multiplying both sides by $2$: $-n_1=-n_2$  
 Multiplying both sides by $-1$: $n_1=n_2$  
 
 Case 2: $n_1, n_2$ are odd.  
 
-Then $\frac{n_1-1}{2}=\frac{n_2-1}{2}$.  
+Then we have $f(n_1)=f(n_2)\iff \frac{n_1-1}{2}=\frac{n_2-1}{2}$.  
 Multiplying both sides by $2$: $n_1-1=n_2-1$  
 Add $1$ to both sides: $n_1=n_2-1$  
 
 Case 3: $n_1$ is even and $n_2$ is odd.  
-`CANNOT HAPPEN. CONTRADICTION. prove this`  
+Then we have $f(n_1)=f(n_2)\iff -\frac{n_1}{2}=\frac{n_2-1}{2}$.  
+Multiplying both sides by $2$: $-n_1=n_2-1$.  
+Since $n_1, n_2\in\mathbb{N}$, we know $-n_1 < 0$, but $n_2-1 \geq 0$, so $-n_1\neq n_2-1$. Therefore, since $2f(n_1)\neq 2f(n_2)$, but we assumed $f(n_1)=f(n_2)$, by contradiction, $n_1$ cannot be even and $n_2$ cannot be odd simultaneously.  
 
 Case 4: $n_1$ is odd and $n_2$ is even.  
-`CANNOT HAPPEN. CONTRADICTION. prove this`  
+Then we have $f(n_1)=f(n_2)\iff \frac{n_1-1}{2}=-\frac{n_2}{2}$.  
+Multiplying both sides by $2$: $n_1-1=-n_2$.  
+Since $n_1, n_2\in\mathbb{N}$, we know $-n_2 < 0$, but $n_1-1 \geq 0$, so $n_1-1\neq -n_2$. Therefore, since $2f(n_1)\neq 2f(n_2)$, but we assumed $f(n_1)=f(n_2)$, by contradiction, $n_1$ cannot be odd and $n_2$ cannot be even simultaneously.  
 
+$\therefore f$ is injective.   
 
 **Prove: $f$ is surjective.**  
 
 We need to prove that for all $z\in\mathbb{Z}$, there exists a $n\in\mathbb{N}$ where $z=f(n)$.  
 
-Since $f$ is injective and surjective, by definition, it is bijective.  
+
+
+Since $f$ is injective and surjective, by definition, it is bijective.  //////////
 
 **QED.**  
