--- a/binghamton/math-330/hw/hw14.md
+++ b/binghamton/math-330/hw/hw14.md
@@ -1,4 +1,4 @@
--# Homework 14
+# Homework 14
 Do Project 11.11. Prove Props. 13.1, 13.3, 13.6, 13.13. (F 5/2)  
 Study Thm. 10.1, §10.2 def. of |x|, §10.3 distance from x to y.  
 §11.1: Know def. of rational numbers.  
@@ -13,14 +13,14 @@ We revisit the definition of a function:
 A function $A\to B$, is really a set $\Gamma\subset(A\times B)$ such that for each $a\in A$ there is **one and only one** element of $\Gamma$ whose first entry is $a$.  
 
 Let $f : [1]\to [n]$.  $[1]$ is defined as $\{1\}$, so $f : \{1\}\to [n]$.  
-This function $f$ can be rewritten as the set $\Gamma_f\subset (\{1\}\times [n])$, where there must exist one and only one entry with $1$ as the first element.  
+This function $f$ can be rewritten as the set $\Gamma_f\subseteq (\{1\}\times [n])$, where there must exist one and only one entry with $1$ as the first element.  
 Therefore, the only valid sets for $\Gamma_f$ are $\{(1, b)\}$, for some arbitrary $b\in [n]$.  
 By definition of $[n]$, when $n>1$, $\{1, 2\}\subseteq [n]$.  
-Since $b$ is a single element, without loss of generality, there will be at least one unused element of $[n]$. Let an unused element $c\in[n]$.  
+Since $b$ is a single element and $\{1, 2\}\subseteq [n]$, without loss of generality, there will be at least one element of $[n]$ that is not present as the second element in any $(a,b)\in\Gamma_f$. Therefore, $f$ is not surjective.  
 
-$f$ is a surjection if for every $n\in[n]$, there exists a $a\in \{1\}$ such that $f(a)=n$.  
+As $f$ is not surjective, $f$ cannot be a bijection.  
 
-`UNFINSIHED`  
+**QED.**  
 
 ## Proposition 13.3
 If $1 \leq k \leq n$ then the function
@@ -40,6 +40,13 @@ is a bijection.
 ## Proposition 13.6  
 Every subset of a finite set is finite.  
 
+**Proof.**  
+
+Let $A$ be a finite set, and let $B\subseteq A$.  
+By defintion, for some $n\in\mathbb{N}$, there exists a bijection $f : [n] \to A$.  
+We need to prove:  
+For some $m\in\mathbb{N}$, there exists a bijection $g : [m] \to B$.  
+
 ## Proposition 13.13  
 $\mathbb{Z}$ is countable.  
 
@@ -49,7 +56,7 @@ We construct a bijection $f : \mathbb{N}\to \mathbb{Z}$.
 
 We define $f$ as follows:  
 
-| $x$   | $f(x)$ |
+| $n$   | $f(n)$ |
 | ----- | ------ |
 | $1$   | $0$    |
 | $2$   | $-1$   |
@@ -59,10 +66,10 @@ We define $f$ as follows:
 | $...$ | $...$  |
 
 Or more formally:  
-$$f(x) := 
+$$f(n) := 
 \begin{cases}
-\frac{x-1}{2} & \text{if } x \text{ is odd}, \\
--\frac{x}{2} & \text{if } x \text{ is even}
+\frac{n-1}{2} & \text{if } n \text{ is odd}, \\
+-\frac{n}{2} & \text{if } n \text{ is even}
 \end{cases}$$  
 
 **Prove: $f$ is injective.**  
@@ -81,7 +88,7 @@ Case 2: $n_1, n_2$ are odd.
 
 Then we have $f(n_1)=f(n_2)\iff \frac{n_1-1}{2}=\frac{n_2-1}{2}$.  
 Multiplying both sides by $2$: $n_1-1=n_2-1$  
-Add $1$ to both sides: $n_1=n_2-1$  
+Add $1$ to both sides: $n_1=n_2$  
 
 Case 3: $n_1$ is even and $n_2$ is odd.  
 Then we have $f(n_1)=f(n_2)\iff -\frac{n_1}{2}=\frac{n_2-1}{2}$.  
@@ -99,8 +106,17 @@ $\therefore f$ is injective.
 
 We need to prove that for all $z\in\mathbb{Z}$, there exists a $n\in\mathbb{N}$ where $z=f(n)$.  
 
+Case 1: $z\geq0$.  
+We can let $n=2z+1$. By proposition 6.15, this means $n$ is odd.  
+Now, show $z=f(n)$.  
+Since $n$ is odd, $f(n)=\frac{n-1}{2}=\frac{(2z+1)-1}{2}=\frac{2z}{2}=z$.  
 
+Case 2: $z<0$.  
+We can let $n=-2z$, which is even.     
+Since $n$ is even, $f(n)=-\frac{n}{2}=-\frac{-2z}{2}=z$.  
 
-Since $f$ is injective and surjective, by definition, it is bijective.  //////////
+We have shown that for any $z\in\mathbb{Z}$, there exists a $n\in\mathbb{N}$ where $z=f(n)$.  Therefore, $f$ is surjective.  
+
+Since $f$ is injective and surjective, by definition, it is bijective.  
 
 **QED.**  
