--- a/binghamton/math-330/hw/hw14.md
+++ b/binghamton/math-330/hw/hw14.md
@@ -47,6 +47,8 @@ By defintion, for some $n\in\mathbb{N}$, there exists a bijection $f : [n] \to A
 We need to prove:  
 For some $m\in\mathbb{N}$, there exists a bijection $g : [m] \to B$.  
 
+man https://math.stackexchange.com/questions/239566/subset-of-a-finite-set-is-finite
+
 ## Proposition 13.13  
 $\mathbb{Z}$ is countable.  
 
