--- a/binghamton/math-330/hw/hw14.md
+++ b/binghamton/math-330/hw/hw14.md
@@ -33,21 +33,62 @@ $$g_k(j) :=
 \begin{cases}
 j & \text{if } j < k, \\
 j+1 & \text{if } j \geq k
-\end{cases}$$
+\end{cases}$$  
 
 is a bijection.  
+
+**Proof.**  
+
+To prove $g_k$ is a bijection, we must prove it is an injection and surjection.  
+
+To prove $g_k$ is an injection, we must show that $g_k(j_1)=g_k(j_2)\implies j_1=j_2$.  
+Suppose $g_k(j_1)=g_k(j_2)$, for some $j_1, j_2\in [n]$ and $n\in \mathbb{N}$. Prove $j_1=j_2$.  
+
+There are 4 cases to consider:  
+
+**Case 1: $j_1 < k$ and $j_2 < k$.**  
+Then $g_k(j_1)=g_k(j_2)$  
+$\iff j_1=j_2$  
+
+**Case 2: $j_1 \geq k$ and $j_2 \geq k$.**  
+Then $g_k(j_1)=g_k(j_2)$  
+$\iff j_1+1=j_2+1$  
+$\iff j_1=j_2$  
+
+**Case 3: $j_1 < k$ and $j_2 \geq k$.**  
+Then $g_k(j_1)=g_k(j_2)$  
+$\iff j_1=j_2+1$, which means $g_k(j_1)\neq g_k(j_2)$. Since the antecedent $g_k(j_1) = g_k(j_2)$ is false, the proposition remains true (for an implication $P\implies Q$, if $\lnot P$, then $P\implies Q$ is true).  
+
+**Case 4: $j_1 \geq k$ and $j_2 < k$.**  
+Then $g_k(j_1)=g_k(j_2)$  
+$\iff j_1+1=j_2$, which means $g_k(j_1)\neq g_k(j_2)$. Since the antecedent $g_k(j_1) = g_k(j_2)$ is false, the proposition remains true.  
+
+To prove $g_k$ is a surjection, we must show that for all $i\in [n]-\{k\}$ there exists a $j\in [n-1]$ where $g_k(j)=i$.  
+
+If $i<k$, let $j=i$. Then, $g_k(j)=g_k(i)=i$.  
+If $i\geq k$, let $j=i-1$. Then, $g_k(j)=g_k(i-1)=(i-1)+1=i$.  
+
+Since $g_k$ is an injection and surjeciton, it is a bijection.  
+**QED.**  
 
 ## Proposition 13.6  
 Every subset of a finite set is finite.  
 
 **Proof.**  
 
+The definition of $[n]$ can be restated as:  
+$[n]=\{i\in\mathbb{N} : 1 \leq i \leq n\}$.  
+
 Let $A$ be a finite set, and let $B\subseteq A$.  
 By defintion, for some $n\in\mathbb{N}$, there exists a bijection $f : [n] \to A$.  
 We need to prove:  
 For some $m\in\mathbb{N}$, there exists a bijection $g : [m] \to B$.  
 
-man https://math.stackexchange.com/questions/239566/subset-of-a-finite-set-is-finite
+Since $f$ is a bijection, then $f^{-1} :  A \to [n]$ exists.  
+
+We now define a function $h : B \to [n]$, by $h(b)=f^{-1}(b)$. We can do this because by def of a subset, $b\in B \implies b\in A$, so $f^{-1}(b)$ for any $b\in B$ must exist.  
+
+Since $$
 
 ## Proposition 13.13  
 $\mathbb{Z}$ is countable.  
