--- a/binghamton/math-330/hw/hw14.md
+++ b/binghamton/math-330/hw/hw14.md
@@ -4,6 +4,25 @@ Study Thm. 10.1, §10.2 def. of |x|, §10.3 distance from x to y.
 §11.1: Know def. of rational numbers.  
 §11.2: Study Prop. 11.10.   
 
+## Project 11.11  
+Find a nonempty subset of $\mathbb{Q}$ that is bounded above but has no supremum (least upper bound) in $\mathbb{Q}$. Justify your claim.  
+
+We define a set $S:=\{x \in \mathbb{Q} : x^2 < 2\}$  
+
+This set is bounded above by $2$, as $(\forall s\in S) \text{ } s\leq 2$.  
+
+**Proof.**  
+
+Take any $x\in S$. By Proposition 8.32(ii), if $x\geq1$, then $x\leq x^2$. By the definition of set $S$, $x^2<2$, so we have $x\leq x^2 < 2$. Therefore, $x<2$.  
+
+**QED.**  
+
+$\sup(S)\notin \mathbb{Q}$.  
+
+**Proof.**  
+
+
+
 ## Proposition 13.1  
 There exists no bijection $[1]\to [n]$ when $n>1$.  
 
