--- a/binghamton/math-330/hw/hw14.md
+++ b/binghamton/math-330/hw/hw14.md
@@ -21,7 +21,9 @@ $\sup(S)\notin \mathbb{Q}$.
 
 **Proof.**  
 
+Note that the definition of $\sqrt{2}$ is $\sup(S)$. By Proposition 11.10, $\sqrt{2}\notin \mathbb{Q}$.  
 
+**QED.**  
 
 ## Proposition 13.1  
 There exists no bijection $[1]\to [n]$ when $n>1$.  
