fraemwork for hw 15

--- a/binghamton/math-330/hw/hw15.md
+++ b/binghamton/math-330/hw/hw15.md
@@ -1,3 +1,24 @@
 # Homework 15
 Prove Thm. 13.14, Cors. 13.18, 13.23, Thm. 13.28
 
+## Theorem 13.14  
+$\mathbb{Z}\times \mathbb{Z}$ is countable.  
+
+## Corollary 13.18  
+$\mathbb{Q}$ is countable.  
+
+**Proof.**  
+
+Idk use Corollary 13.17 that states $\mathbb{Z}\times (\mathbb{Z}-\{0\})$ is countable. Since the rationals can be constructed from this set.  
+
+## Corollary 13.23  
+The set $\mathbb{R}-\mathbb{Q}$ of irrational numbers is uncountable.  
+
+**Proof.**  
+Use Theorem 13.22 that $\R$ is not countable if i were to guess.  
+
+## Corollary 13.28  
+All open intervals have the same cardinality.  
+
+**Proof.**  
+Use Theorem 13.25 that every open interval $(a,b)$ has the same cardinality as $\mathbb{R}$.  
