--- a/binghamton/math-330/hw/hw15.md
+++ b/binghamton/math-330/hw/hw15.md
@@ -9,7 +9,18 @@ $\mathbb{Q}$ is countable.
 
 **Proof.**  
 
-Idk use Corollary 13.17 that states $\mathbb{Z}\times (\mathbb{Z}-\{0\})$ is countable. Since the rationals can be constructed from this set.  
+We denote the set $P=\mathbb{Z}\times(\mathbb{Z}-\{0\})$.  We know $P$ is countable by Corollary 13.17.  
+By Proposition 13.9, since $P$ is countable there exists a surjection $f:\mathbb{N}\to P$.  
+
+We now define a function $g : P \to \mathbb{Q}$ by:  
+$$g((a,b))=\frac{a}{b}$$  
+
+By definition, $x\in\mathbb{Q}$ if $x=\frac{a}{b}$, where $a,b\in\mathbb{Z}$ and $b\neq 0$. These conditions can be restated as $a\in\mathbb{Z}$ and $b\in(\mathbb{Z}-\{0\})$. Take any $a\in\mathbb{Z}$ and $b\in(\mathbb{Z}-\{0\})$. We can construct a tuple $(a,b)\in P$, therefore $g$ is a surjection.  
+
+Since $f$ and $g$ are surjections, $g\circ f : \mathbb{N}\to \mathbb{Q}$ is also a surjection.  
+$\therefore$ a surjection from $\mathbb{N}\to\mathbb{Q}$ exists, so by Proposition 13.9, $\mathbb{Q}$ is countable.  
+
+**QED.**  
 
 ## Corollary 13.23  
 The set $\mathbb{R}-\mathbb{Q}$ of irrational numbers is uncountable.  
@@ -21,4 +32,4 @@ Use Theorem 13.22 that $\R$ is not countable if i were to guess.
 All open intervals have the same cardinality.  
 
 **Proof.**  
-Use Theorem 13.25 that every open interval $(a,b)$ has the same cardinality as $\mathbb{R}$.  
+By Theorem 13.25, every open interval $(a,b)$ for $a,b\in\mathbb{R}$ has the same cardinality as $\mathbb{R}$. If every open interval has the same cardinality as $\mathbb{R}$, then by transitivity every one of those intervals has the same cardinality.  
