--- a/binghamton/math-330/hw/hw15.md
+++ b/binghamton/math-330/hw/hw15.md
@@ -26,10 +26,20 @@ $\therefore$ a surjection from $\mathbb{N}\to\mathbb{Q}$ exists, so by Propositi
 The set $\mathbb{R}-\mathbb{Q}$ of irrational numbers is uncountable.  
 
 **Proof.**  
-Use Theorem 13.22 that $\R$ is not countable if i were to guess.  
+
+Assume, by way of contradiction, that $\mathbb{R}-\mathbb{Q}$ is countable. By Corollary 13.18, we know $\mathbb{Q}$ is countable. 
+
+By Proposition 13.19, $(\mathbb{R}-\mathbb{Q})\cup \mathbb{Q}$ must be countable, however, $(\mathbb{R}-\mathbb{Q})\cup \mathbb{Q}$ is just the set $\mathbb{R}$, and by Theorem 13.22, we know $\mathbb{R}$ is not countable. 
+
+By contradiction, $\mathbb{R}-\mathbb{Q}$ must not be countable.  
+
+**QED.**  
 
 ## Corollary 13.28  
 All open intervals have the same cardinality.  
 
 **Proof.**  
+
 By Theorem 13.25, every open interval $(a,b)$ for $a,b\in\mathbb{R}$ has the same cardinality as $\mathbb{R}$. If every open interval has the same cardinality as $\mathbb{R}$, then by transitivity every one of those intervals has the same cardinality.  
+
+**QED.**  
